fixed body and iage alignment on home page.

--- a/_includes/css/buckets.css
+++ b/_includes/css/buckets.css
@@ -14,9 +14,8 @@
 }
 
 p{
-	color:#000000;
+	color:#666;
 	text-align: left;
-	margin: 1rem;
 }/* CSS Document */
 
 .container2{
