--- a/_includes/css/promos.css
+++ b/_includes/css/promos.css
@@ -2,5 +2,5 @@
 /* CSS Document */
 
 .promo-large{
-	padding: 1rem;
+	padding: 0rem;
 	}
